use tricky way to fix accent not shown on ios

--- a/ionic/src/app/app.scss
+++ b/ionic/src/app/app.scss
@@ -34,6 +34,13 @@
   padding: 1px 0px 0px 0px;
 }
 
+.ios {
+  .accent,
+  .accent0 {
+    box-shadow: inset 0 3px 0 0 #f63;
+  }
+}
+
 .accent {
   position: relative;
   white-space: nowrap;
